Remove backslash before the src link of images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row align-items-center h-100">
                 <div class="col-12 col-lg-6 mx-auto">
-                    <img src="/images/hero-img.png" alt="Hero Image" class="img img-fluid">
+                    <img src="images/hero-img.png" alt="Hero Image" class="img img-fluid" />
                 </div>
                 <div class="col-12 col-lg-6">
                     <h1 class="customFadeInUp">
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-4">
                     <div class="feature">
-                        <img src="/images/hero-img.png" alt="Hero Image" class="img img-fluid">
+                        <img src="images/hero-img.png" alt="Hero Image" class="img img-fluid" />
                         <h3>
                             For building tenants
                         </h3>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-4">
                     <div class="feature">
-                        <img src="/images/hero-img.png" alt="Hero Image" class="img img-fluid">
+                        <img src="images/hero-img.png" alt="Hero Image" class="img img-fluid" />
                         <h3>
                             For building managers
                         </h3>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-4">
                     <div class="feature">
-                        <img src="/images/hero-img.png" alt="Hero Image" class="img img-fluid">
+                        <img src="images/hero-img.png" alt="Hero Image" class="img img-fluid" />
                         <h3>
                             For system integrators
                         </h3>
@@ -152,7 +152,7 @@
             <section class="features">
                 <div class="row">
                     <div class="col-md-6 feature">
-                        <img src="images/icons/features-icon-ok.png" class="icon">
+                        <img src="images/icons/features-icon-ok.png" class="icon" />
                         <section>
                             <h4>
                                 Secure
@@ -164,7 +164,7 @@
                         </section>
                     </div>
                     <div class="col-md-6 feature">
-                        <img src="images/icons/features-icon-world.png" class="icon">
+                        <img src="images/icons/features-icon-world.png" class="icon" />
                         <section>
                             <h4>
                                 Agnostic
@@ -177,7 +177,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 feature">
-                        <img src="images/icons/features-icon-canvas.png" class="icon">
+                        <img src="images/icons/features-icon-canvas.png" class="icon" />
                         <section>
                             <h4>
                                 NABERS reporting
@@ -201,7 +201,7 @@
             <section>
                 <div class="row">
                     <div class="col-md-2 offset-1">
-                        <img class="img img-fluid" src="/images/logos/logo-typhon-solutions.png">
+                        <img class="img img-fluid" src="images/logos/logo-typhon-solutions.png" />
                     </div>
                     <div class="col-md-7 mt-1">
                         <p class="mt-4">
